--- a/Practice/w06-assessment.html
+++ b/Practice/w06-assessment.html
@@ -342,7 +342,7 @@ D) Cannot be determined, because the distribution of the population is not known
 <!--VVVV     Problem 9      VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 9.</b> &nbsp; The monthly expenditures on food by single adults in one city are normally distributed with a mean of $410 and a standard deviation of $70. What is the probability that the sampling error made in estimating the mean monthly expenditure of all single adults in that city by the mean of a random sample of 90 such adults will be at most $10?  
+<b>Problem 9.</b> &nbsp; The monthly expenditures on food by single adults in one city are normally distributed with a mean of $410 and a standard deviation of $70. What is the probability that the sampling error made in estimating the mean monthly expenditure of all single adults in that city by the mean of a random sample of 90 such adults will be at most $405?  
 <BR>
 <!--center><img src="w04/q09.1.jpg" alt="w04-q09.1" width="230" height="130"></center--->
 </span>
@@ -371,7 +371,7 @@ D) 7.3786 <BR>
 <!--VVVV     Problem 10    VVVVV-->
 <!--VVVVVVVVVVVVVVVVVVVVVVVVVVVV-->     
 <p class="mcq"><span class = "ques">
-<b>Problem 10.</b> &nbsp; The amount of coffee that a filling machine puts into an 8-ounce jar is normally distributed with a mean of 8.2 ounces and a standard deviation of 0.18 ounce. Determine the percentage of samples of size 16 that will have mean amounts of coffee within 8.1 ounce of the population mean of 8.3 ounces. 
+<b>Problem 10.</b> &nbsp; The amount of coffee that a filling machine puts into an 8-ounce jar is normally distributed with a mean of 8.2 ounces and a standard deviation of 0.18 ounce. Determine the percentage of samples of size 16 that will have mean amounts of coffee within 8.1 and 8.3 ounces. 
 <BR>
 <!--center><img src="w04/q10.1.jpg" alt="w04-q10.1" width="230" height="120"></center--->
 </span>
