--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
           <ul>
             <li> A. Summary of categorical data</li>
               <ul>
-                 <li>1). Frequency table </li>
-                 <li>2). Bar chart and Pareto chart</li> 
-                 <li>3). Pie chart</li>
+                 <li>&nbsp;&nbsp;&nbsp;&nbsp;1). Frequency table </li>
+                 <li>&nbsp;&nbsp;&nbsp;&nbsp;2). Bar chart and Pareto chart</li> 
+                 <li>&nbsp;&nbsp;&nbsp;&nbsp;3). Pie chart</li>
               </ul>
             <li> B. Summary of numerical data: histograms and frequency tables, </li>
               <ul>
-                 <li>1). Steps for constructing a frequency table </li>
-                 <li>2). Histogram</li> 
+                 <li>&nbsp;&nbsp;&nbsp;&nbsp;1). Steps for constructing a frequency table </li>
+                 <li>&nbsp;&nbsp;&nbsp;&nbsp;2). Histogram</li> 
               </ul>
             </ul>
               <li><b>Lecture Note</b></li>
@@ -328,7 +328,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                             <li><a href="index05.html" class="nav-link">5. Sampling Distributions </a> </li>
                             <li><a href="index06.html" class="nav-link">6. Z-Confidence Intervals </a></li>    
 				            <li><a href="index07.html" class="nav-link">7. t-confidence Intervals </a></li> 
-                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/9]</font></center></a>
+                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/16]</font></center></a>
                                   <hr color = "skyblue"><br> 
                                   
                             <li><a href="index08.html" class="nav-link">8. Testing Hypotheses </a></li>
