--- a/index02.html
+++ b/index02.html
@@ -241,19 +241,19 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
              <ul>
                <li>A. Central tendency</li>
                  <ul>
-                  <li> 1). Mean</li>
-                  <li> 2). Median</li>
-                  <li> 3). Model</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 1). Mean</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 2). Median</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 3). Model</li>
                  </ul>
                <li>B. Variation (spread) </li>
                  <ul>
-                  <li> 1). Variance</li>
-                  <li> 2). Standard deviation</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 1). Variance</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 2). Standard deviation</li>
                  </ul>
                <li>C. Location </li>
                 <ul>
-                  <li> 1). Z-score transformation</li>
-                  <li> 2). Percentile calculation</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 1). Z-score transformation</li>
+                  <li>&nbsp;&nbsp;&nbsp;&nbsp; 2). Percentile calculation</li>
                  </ul>
                <li>D. Boxplot and Inter-quartile range (IQR)</li>
                
@@ -323,7 +323,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                             <li><a href="index05.html" class="nav-link">5. Sampling Distributions </a> </li>
                             <li><a href="index06.html" class="nav-link">6. Z-Confidence Intervals </a></li>    
 				            <li><a href="index07.html" class="nav-link">7. t-confidence Intervals </a></li> 
-                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/9]</font></center></a>
+                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/16]</font></center></a>
                                   <hr color = "skyblue"><br> 
                                   
                             <li><a href="index08.html" class="nav-link">8. Testing Hypotheses </a></li>
