--- a/index03.html
+++ b/index03.html
@@ -250,15 +250,15 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                   <li>A. Definition of a random variable</li>
                   <li>B. Characterizing discrete random variables</li>
                      <ul>
-                        <li>1). Explicit definition</li>
-                        <li>2). Probability mass function (PMF)</li>
-                        <li>3). Expectation and variance</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;1). Explicit definition</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;2). Probability mass function (PMF)</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;3). Expectation and variance</li>
                      </ul>
                   <li>C. Characterizing continuous random variables</li>
                       <ul>
-                        <li>1). Explicit definition</li>
-                        <li>2). Probability density function (pdf)</li>
-                        <li>3). Expectation and variance</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;1). Explicit definition</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;2). Probability density function (pdf)</li>
+                        <li>&nbsp;&nbsp;&nbsp;&nbsp;3). Expectation and variance</li>
                   </ul>
                   <li>D. Uniform distribution</li>
                </ul>
@@ -324,7 +324,7 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
                             <li><a href="index05.html" class="nav-link">5. Sampling Distributions </a> </li>
                             <li><a href="index06.html" class="nav-link">6. Z-Confidence Intervals </a></li>    
 				            <li><a href="index07.html" class="nav-link">7. t-confidence Intervals </a></li> 
-                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/9]</font></center></a>
+                              <li><hr color = "skyblue"> <a href="exam02.html" class="nav-link"><center><font color = "red"> Midterm Exam 2 [Thursday, 10/16]</font></center></a>
                                   <hr color = "skyblue"><br> 
                                   
                             <li><a href="index08.html" class="nav-link">8. Testing Hypotheses </a></li>
