--- a/index08.html
+++ b/index08.html
@@ -288,12 +288,12 @@ var sgr_main = {"sgr_site_key":"6LcmTAcaAAAAAEELVElChVbNtpYH8TxjxPvYq9gv"};
        <h5>Weekly Assignments </h5> 
             <ol style="line-height: 1.5em; margin-bottom: 15px">  
             
-            <font color = "darkred">There is no weekly quiz for this week due to midterm exam #2 scheduled on Thursday. </font>
+            <!--font color = "darkred">There is no weekly quiz for this week due to midterm exam #2 scheduled on Thursday. </font-->
             <ul>
-              <!--li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
+              <li>a. <b>Available on D2L:</b> 12:00 PM, Thursday</li>
               <li>b. <b>Due:</b> 11:30 PM, Sunday</li>
-               <!--li>  <a href="HW/week07-quiz-key.pdf"  target="popup" onclick="HW/week07-quiz-key.pdf','name','width=900,height=500')" ><font color = "red">Answer Key </font>
-                   </a></li-->
+               <li>  <a href="WeeklyQuizzes/Week08-Quiz.pdf"  target="popup" onclick="WeeklyQuizzes/Week08-Quiz.pdf','name','width=900,height=500')" ><font color = "red">Answer Key </font>
+                   </a></li>
             </ul>  
           </ol> 
   </td>
